2003/10/29 12:40 muppetman

	fixing a few things while tracking down bugs reported by
	Bjarne Steinsbø:

	* xs/GtkCellRenderer.xs, xs/GtkStyle.xs: all of the gtk_paint_foo()
	functions ask for GdkWindows, but actually work on GdkDrawables.
	according to http://bugzilla.gnome.org/show_bug.cgi?id=102678 ,
	the same is true for gtk_cell_renderer_render(), and has been fixed
	in gtk+ 2.3.0.  so, we use GdkDrawable instead of GdkWindow in all
	of those places.

	* examples/cellrenderer_popup.pl: if the treeview is reorderable,
	the popup and editing interaction is broken, resulting in the treeview
	thinking we're still dragging the row.  fix that by using a dummy
	GtkCellEditable.

	* xs/GtkEntry.xs: GtkEntry also implements GtkCellEditable.
	use gperl_prepend_isa() instead of custom AV-handling code.

2003/10/29 09:36 rwmcfa1

	* xs/GtkWidget.xs: improved error messages in get/set_flags. croak when
	trying to set a read only flag.

2003/10/29 02:00 muppetman

	* Gtk2.pm: add a version check to Gtk2's import

	* Makefile.PL: use Glib's new 'atleast' version check

2003/10/28 23:21 muppetman

	* Makefile.PL: use the new semantics for Glib::MakeHelper methods.
	never just 'use' a non-standard dependency module, place those
	use lines in the eval'd string.  otherwise, the Makefile.PL won't
	pass the compile phase, and CPAN won't pick up dependencies 
	properly.

2003/10/28 16:47 rwmcfa1

	* Gtk2/MANIFEST: missing files added

	* Gtk2/Makefile.PL: updates to new system, MakeHelper. use strict and 
	use warnings safe now

	* Gtk2/xs/Gtk2.xs: put things in an appropriate doc object

2003/10/27 19:38 muppetman

	* Makefile.PL: documentation generation experimentation

	* xs/GdkEvent.xs: apidoc pod bundles all of the event subtypes into
	GdkEvent's docs; which creates another problem, namely, they all have
	the same instance name in their call signatures.  so, add =signature
	pods to give them better names.  implemented a few of the more
	esoteric members, too.
	